Restructure output console

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
-    <div class="output-panel">
-        <span id="output"></span>
-    </div>
+    <ul class="output-panel">
+        <li>Round: <span id="round-number"></span></li>
+        <li>Player: <span id="player-score"></span></li>
+        <li>CPU: <span id="cpu-score"></span></li>
+        <li><hr></li>
+        <li>You chose: <span id="player-choice"></span></li>
+        <li>CPU chose: <span id="cpu-choice"></span></li>
+    </ul>
 </body>
 </html>
