--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
-    <ul class="output-panel">
-        <li>Round: <span id="round-number"></span></li>
-        <li>Player: <span id="player-score"></span></li>
-        <li>CPU: <span id="cpu-score"></span></li>
-        <li><hr></li>
-        <li>You chose: <span id="player-choice"></span></li>
-        <li>CPU chose: <span id="cpu-choice"></span></li>
-    </ul>
+    <div class="output-panel">
+        <div>Round: <span id="round-number"></span></div>
+        <div>Player: <span id="player-score"></span></div>
+        <div>CPU: <span id="cpu-score"></span></div>
+        <hr>
+        <div>CPU chose: <span id="cpu-choice"></span>
+        <div>You chose: <span id="player-choice"></span></div>  
+    </div>
 </body>
 </html>
