Complete functionality without styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <div>CPU: <span id="cpu-score"></span></div>
         <hr>
         <div>CPU chose: <span id="cpu-choice"></span>
-        <div>You chose: <span id="player-choice"></span></div>  
+        <div>You chose: <span id="player-choice"></span></div>
+        <div><span id="result"></span></div>
     </div>
 </body>
 </html>
